# iopddl_experiments

./: Dockerfile  LICENSE.md  README.md  iopddl_final_results.csv  plots.ipynb  pyproject.toml
convergence_and_ablation_experiment/: ablation.json  convergence.json  convergence_and_ablation.sh  convergence_global_penalty.sh  global_convergence.json  lagrange_batch_quick  parse_ablation.py  parse_global_results.py  parse_results.py  quick_results.db  toulbar_lagrange_quick.py
convergence_and_ablation_experiment/s1/: A_global_solver.out  A_solver.out  B_global_solver.out  B_solver.out  C_global_solver.out  C_solver.out  D_global_solver.out  D_solver.out  E_global_solver.out  E_solver.out  F_global_solver.out  F_solver.out  G_global_solver.out  G_solver.out  H_global_solver.out  H_solver.out  I_global_solver.out  I_solver.out  J_global_solver.out  J_solver.out  K_global_solver.out  K_solver.out  L_global_solver.out  L_solver.out  M_global_solver.out  M_solver.out  N_global_solver.out  N_solver.out  O_global_solver.out  O_solver.out  P_global_solver.out  P_solver.out  Q_global_solver.out  Q_solver.out  R_global_solver.out  R_solver.out  S_global_solver.out  S_solver.out  T_global_solver.out  T_solver.out  (+10 more)
convergence_and_ablation_experiment/s1457/: A_global_solver.out  A_solver.out  B_global_solver.out  B_solver.out  C_global_solver.out  C_solver.out  D_global_solver.out  D_solver.out  E_global_solver.out  E_solver.out  F_global_solver.out  F_solver.out  G_global_solver.out  G_solver.out  H_global_solver.out  H_solver.out  I_global_solver.out  I_solver.out  J_global_solver.out  J_solver.out  K_global_solver.out  K_solver.out  L_global_solver.out  L_solver.out  M_global_solver.out  M_solver.out  N_global_solver.out  N_solver.out  O_global_solver.out  O_solver.out  P_global_solver.out  P_solver.out  Q_global_solver.out  Q_solver.out  R_global_solver.out  R_solver.out  S_global_solver.out  S_solver.out  T_global_solver.out  T_solver.out  (+10 more)
convergence_and_ablation_experiment/s2468/: A_global_solver.out  A_solver.out  B_global_solver.out  B_solver.out  C_global_solver.out  C_solver.out  D_global_solver.out  D_solver.out  E_global_solver.out  E_solver.out  F_global_solver.out  F_solver.out  G_global_solver.out  G_solver.out  H_global_solver.out  H_solver.out  I_global_solver.out  I_solver.out  J_global_solver.out  J_solver.out  K_global_solver.out  K_solver.out  L_global_solver.out  L_solver.out  M_global_solver.out  M_solver.out  N_global_solver.out  N_solver.out  O_global_solver.out  O_solver.out  P_global_solver.out  P_solver.out  Q_global_solver.out  Q_solver.out  R_global_solver.out  R_solver.out  S_global_solver.out  S_solver.out  T_global_solver.out  T_solver.out  (+10 more)
convergence_and_ablation_experiment/s3579/: A_global_solver.out  A_solver.out  B_global_solver.out  B_solver.out  C_global_solver.out  C_solver.out  D_global_solver.out  D_solver.out  E_global_solver.out  E_solver.out  F_global_solver.out  F_solver.out  G_global_solver.out  G_solver.out  H_global_solver.out  H_solver.out  I_global_solver.out  I_solver.out  J_global_solver.out  J_solver.out  K_global_solver.out  K_solver.out  L_global_solver.out  L_solver.out  M_global_solver.out  M_solver.out  N_global_solver.out  N_solver.out  O_global_solver.out  O_solver.out  P_global_solver.out  P_solver.out  Q_global_solver.out  Q_solver.out  R_global_solver.out  R_solver.out  S_global_solver.out  S_solver.out  T_global_solver.out  T_solver.out  (+10 more)
convergence_and_ablation_experiment/s43/: A_global_solver.out  A_solver.out  B_global_solver.out  B_solver.out  C_global_solver.out  C_solver.out  D_global_solver.out  D_solver.out  E_global_solver.out  E_solver.out  F_global_solver.out  F_solver.out  G_global_solver.out  G_solver.out  H_global_solver.out  H_solver.out  I_global_solver.out  I_solver.out  J_global_solver.out  J_solver.out  K_global_solver.out  K_solver.out  L_global_solver.out  L_solver.out  M_global_solver.out  M_solver.out  N_global_solver.out  N_solver.out  O_global_solver.out  O_solver.out  P_global_solver.out  P_solver.out  Q_global_solver.out  Q_solver.out  R_global_solver.out  R_solver.out  S_global_solver.out  S_solver.out  (+12 more)
lower_bounds/: 18_S.out  1_B.out  21_V.out  gurobi.py  gurobi_batch  gurobi_lagrange.py  lagrange_batch  node_to_lagrange.py  results.db  toulbar_lagrange.py
solver/: CMakeLists.txt  PreLoad.cmake  README.md  main.cpp
solver/sysinfo/: CMakeLists.txt  sysinfo.cpp  sysinfo.h
solver/toulbar/: CMakeLists.txt
solver/toulbar/cmake-script/: mingw32-config.cmake
solver/toulbar/src/convex/: LR_BCD.cpp  custom_dnmat_dnvec.hpp  objectiveMatrix.hpp
solver/toulbar/src/core/: tb2binconstr.hpp  tb2enumvar.cpp  tb2enumvar.hpp  tb2wcsp.cpp  tb2wcsp.hpp
solver/toulbar/src/utils/: lp-parser.cpp  tb2integer.hpp
(+249 files in other folders)
